icon updated who we are

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,6 +25,7 @@ body {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+  background-color: black !important;
 }
 
 .card-client-no {
