icon updated who we are

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -82,7 +82,7 @@ imonials Carousel Styles */
 }
 
 .testimonial-dots li.slick-active div {
-  background-color: #f59e0b !important;
+  background-color: #C08735 !important;
 }
 
 .bg-contact-us {
