--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -528,3 +528,16 @@ background-color: #AC9020  !important;
 .hover\:bg-\[\#AC9020\]:hover{
   background-color: #AC9020  !important;
 }
+
+.floating-input input, .floating-input select, .floating-input textarea {
+  
+    font-size: 12px !important;
+
+}
+.rounded-lg {
+    border-radius: 0.3rem !important;
+}
+
+.rounded-2xl {
+    border-radius: 0.5rem !important;
+}
