--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -294,7 +294,7 @@ color:white !important;
 .floating-input label {
   position: absolute;
   left: 1rem;
-top: 8px;
+top: 11px;
   font-size: 0.875rem;
   color: #9ca3af;
   pointer-events: none;
@@ -302,6 +302,7 @@ top: 8px;
   background: white;
   padding: 0 0.5rem;
   z-index: 1;
+  font-size: 12px;
   font-weight: 400;
 }
 
