--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -685,8 +685,15 @@ iper Custom Styles */
 Contact Form Mobile Fixes */
 @media (max-width: 768px) {
   #contact-us {
-    min-height: 100vh !important;
+    min-height: 85vh !important;
     padding: 1rem 0 !important;
+  }
+
+  .adv-section{
+        display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 28px;
   }
   
   #contact-us .container {
